fixed the tree placement to actually not place trees on the path, z-index changes to make application look better, trees different sizes

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ span#centersun{
 }
 img#sunImage{
     position:absolute;
-    z-index:3;
+    z-index:2;
     width:5vw;
     height:auto;
 }
